--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -13,13 +13,19 @@
      <%= @questions.each do |question| %>
         <tr>
           <td><%= question.id %></td>
-          <td><%= question.title %></td>
-          <td>[edit] [delete]</td>
+          <td><%= link_to question.title, question_path(question) %></td>
+          <td>
+            [<%= link_to 'edit', edit_question_path(question) %>]
+            [<%= link_to 'delete', question_path(question), method: :delete, data:{ confirm: 'Are you sure'} %>]</td>
         </tr>
         <% end %>
       </tbody>
 
     </table>
+
+    <div>
+      <%= link_to 'new', new_question_path %>
+    </div>
 
   </div>
 </div>
