--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -26,10 +26,10 @@
               <%= answer.name %>
             </td>
             <td>
-              <%= link_to 'Edit', edit_question_answer_path(answer) %>
+              <%= link_to 'Edit', edit_question_answer_path(@question, answer) %>
             </td>
             <td>
-              
+              <%= link_to 'Delete', question_answer_path(@question, answer), method: :delete, data:{ confirm: 'Are you sure?'} %>
             </td>
           </tr>
           <% end %>
