--- a/app/views/answers/edit.html.erb
+++ b/app/views/answers/edit.html.erb
@@ -4,14 +4,14 @@
     <div class="form-group">
     <div class="form-group">
     <label>Name</label>
-    <%= f.text_field :name, class='form-control' %>
+    <%= f.text_field :name, class: 'form-control' %>
     </div>
     <div class="form-group">
     <label>Content</label>
-    <%= f.text_field :content, class='form-control' %>
+    <%= f.text_area :content, class: 'form-control' %>
     </div>
     <div class="form-group">
-    <%= f.submit 'update', class: 'btn btn-primary' %>
+    <%= f.submit "update", class: 'btn btn-primary' %>
     </div>
     </div>
     <% end %>
